--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,10 @@ tasks:
       wget -O - https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
       echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
       sudo apt update && sudo apt install terraform
+      
+  - name: cdk 
+    before: | 
+      npm i -g aws-cdk
 
       
       
